# bake

./: .gitignore  Cargo.toml  README.md
bake_macro/: Cargo.toml
bake_macro/src/: interpolation.rs  lib.rs
examples/simple_setup/lib/: Cargo.toml
examples/simple_setup/lib/src/: json.rs  lib.rs
examples/simple_setup/lib_test/: Cargo.toml
examples/simple_setup/lib_test/src/: lib.rs
examples/simple_setup/macro_test/: Cargo.toml
examples/simple_setup/main/: Cargo.toml
examples/simple_setup/main/src/: main.rs
examples/simple_setup/main_test/: Cargo.toml
examples/simple_setup/main_test/src/: main.rs
examples/simple_setup/parse_macro/: Cargo.toml
examples/simple_setup/parse_macro/src/: lib.rs
lib/: Cargo.toml
lib/bake_macro/: Cargo.toml
lib/bake_macro/src/: derive.rs  interpolation.rs  lib.rs
lib/src/: basic_types.rs  collections.rs  lib.rs  ops.rs  pointers.rs  tuples.rs
lib/src/interpolation/: flatten.rs  mod.rs  ops.rs
lib_test/: Cargo.toml
lib_test/src/: lib.rs
macro_test/: Cargo.toml
macro_test/src/: lib.rs
main_test/: Cargo.toml
main_test/src/: main.rs
src/: basic_types.rs  functions.rs  lib.rs  time.rs
src/interpolation/: helper.rs  ops.rs
