[package]
name = "struct_baker"
version = "0.1.0"
edition = "2021"
description = "A crate to enable ergonomic creation of compile time parsers"
license = "MIT"
repository = "https://github.com/Ichmed/bake"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.23"
syn = "1.0.107"
struct_baker_derive = { version = "0.1.0", path = "bake_macro" }
proc-macro2 = "1.0.51"
nom = { version = "7.1.3", optional = true }

[features]
allow_pointers = []
nom = ["dep:nom"]
