[package]
name = "struct_baker_derive"
version = "0.1.0"
edition = "2021"
description = "The derive macro for struct_baker"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = {version = "1.0.107", features=["full", "extra-traits"]}
snailquote = "0.3.1"

[lib]
proc-macro=true
