[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
struct_baker = { path = "../../../lib", features = ["nom"] }
nom = "7.1.3"
parse-hyperlinks = "0.23.4"
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = "1.0.109"

[features]
macro = []
