[package]
name = "parse_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
struct_baker = {path="../../../lib"}
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = "1.0.107"
lib = {path="file://../../lib", features=["macro"]}

[lib]
proc-macro=true
